--- a/css_entr_6.css
+++ b/css_entr_6.css
@@ -1,14 +1,24 @@
 body,html{
 	height:100%;
 	width:100%;
+	padding: 0;
+	margin: 0;
 }
 
-#main{
-	height:100%;
-	width:100%;
+body{
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+#main{
+	height:500px;
+	width:300px;
+	background-color: black;
+}
+
+#main2{
+
 }
 
 .head{
