--- a/css_entr_6.css
+++ b/css_entr_6.css
@@ -1,3 +1,26 @@
+@keyframes moveeyes{
+	0% {
+		width:64px;
+		height:58px;
+	}
+	20% {
+		width:89px;
+		height:25px;
+	}
+	40%{
+		width:114px;
+		height:58px;
+	}
+	70%{
+		width:89px;
+		height:110px;
+	}
+	100%{
+		width:64px;
+		height:58px;
+	}
+}
+
 body,html{
 	height:100%;
 	width:100%;
@@ -12,25 +35,190 @@ body{
 }
 
 #main{
-	height:500px;
+	height:380px;
 	width:300px;
-	background-color: black;
+}
+
+#main1{
+	height:112.5px;
+	width:300px;
+	display:flex;
+	justify-content:center;
 }
 
 #main2{
-
+	position:absolute;
+	margin-top:3px;
+	height:160px;
+	width:300px;
+	display:flex;
+	justify-content:center;
+	z-index: -1000;
 }
 
-.head{
-	width: 170px;
-	height:300px;
+#main3{
+	height:264.5px;
+	width:300px;
+	margin-top:3px;
+	display:flex;
+	justify-content:center;
+	align-items: flex-end;
 }
 
-#head1{
-	background-color: grey;
-	border-radius:25px;
+#main1>.fi{
+	position:absolute;
+	height:30px;
+	width:30px;
+	border-radius:15px;
+	background-color:darkgrey;
+}
+#main1>.se{
+	display: flex;
+	align-self: flex-end;
+	height:100px;
+	width:13px;
+	background-color:darkgrey;
 }
 
-#head2{
-	background-color: red;
+#main2>.fi{
+	position:absolute;
+	height:50px;
+	width:50px;
+	border-radius:20px;
+	background-color:darkgrey;
+}
+
+#main2>.se{
+	position:absolute;
+	display: flex;
+	align-self: flex-end;
+	height:150px;
+	width:150px;
+	border-radius:75px;
+	background-color:darkgrey;
+}
+
+#main3>.fi{
+	position:absolute;
+	height:189.5px;
+	width:150px;
+	background-color:darkgrey;
+	z-index: -100;
+}
+
+#main3>.se{
+	height:170px;
+	width:300px;
+}
+
+#main3>.se>.fi{
+	height:150px;
+	width:300px;
+	display: flex;
+	justify-content: center;
+}
+#main3>.se>.fi>.border{
+	position:absolute;
+	height:60px;
+	width:190px;
+	border-radius:50px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: #3c4656;
+	display: flex;
+	align-self: flex-start;
+}
+
+#main3>.se>.fi>.glasses{
+	position:absolute;
+	height:70px;
+	width:200px;
+	border-radius:50px;
+	display: flex;
+	align-self: flex-start;
+	justify-content: center;
+	align-items: center;
+	z-index: -99;
+}
+
+#main3>.se>.fi>.glasses>.fi{
+	position:absolute;
+	height:60px;
+	width:195px;
+	border-radius:50px;
+	background-color: black;
+	z-index: -90;
+}
+
+.container{
+	position: absolute;
+	height:58px;
+	width:64px;
+	display: flex;
+	align-self:flex-start;
+	justify-content: space-between;
+	align-items: center;
+	z-index: -50;
+	animation-name:moveeyes;
+    animation-duration: .7s;
+    animation-direction: reverse;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+.eye{
+	height:15px;
+	width:15px;
+	background-color: #3c4656;
+}
+
+#main3>.se>.fi>.glasses>.se{
+	margin:1px;
+	height:68px;
+	width:70px;
+	border-radius:35px;
+	background-color: #ffe882;
+	z-index: -80;
+}
+
+#main3>.se>.fi>.mouth{
+	position:absolute;
+	height:50px;
+	width:130px;
+	border-radius:50px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: #3c4656;
+	display: flex;
+	align-self: flex-end;
+	justify-content: center;
+	align-items: center;
+}
+
+.fo{
+	position:absolute;
+	height:55px;
+	width:135px;
+	border-radius:50px;
+	background-color: #3c4656;
+	display: flex;
+	align-self: flex-end;
+	z-index: -80;
+}
+
+#main3>.se>.fi>.th{
+	position:absolute;
+	padding:8px;
+	display: flex;
+	align-self: flex-end;
+	height:45px;
+	width:120px;
+	display: grid;
+	grid-template-columns: auto auto auto auto auto auto;
+	grid-gap:3px;
+	z-index: -79;
+}
+
+#main3>.se>.fi>.th div{
+	background-color: #ffe882;
 }
