--- a/galeria.css
+++ b/galeria.css
@@ -1,23 +1,33 @@
 html,body{
 	margin:0;
 	padding:0;
-	background-color;#deccff;
+	background-color:#deccff;
 }
 
 #container{
-	margin-top:100px;
+	margin:auto;
+	margin-top:100px ;
 	width:60vw;
 	height:100vh;
-	display:flex;
-	align-content: center;
 }
 
 #container>div{
-	position:relative;
+	float:left;
 	height:150px;
-	margin:5px 7px;
+	width:200px;
+	margin:20px 20px;
+	opacity:.8;
 }
 
-#container>div>img{
+img{
+	height:150px;
+	width:200px;
+}
 
+#container>div:hover{
+	position:relative;
+	z-index: 5;
+	opacity:1;
+	transform:rotate(360deg) scale(2.5);
+	transition:transform .2s;
 }
