--- a/galeria.css
+++ b/galeria.css
@@ -1,21 +1,26 @@
 html,body{
+	width:100%;
+	height: 100%;
 	margin:0;
 	padding:0;
 	background-color:#deccff;
 }
 
+body{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 #container{
-	margin:auto;
-	margin-top:100px ;
 	width:60vw;
-	height:100vh;
 }
 
 #container>div{
-	float:left;
+	border: 1px solid black;
+	display: inline-flex;
 	height:150px;
 	width:200px;
-	margin:20px 20px;
+	padding:20px 20px;
 	opacity:.8;
 }
 
@@ -28,6 +33,7 @@ img{
 	position:relative;
 	z-index: 5;
 	opacity:1;
-	transform:rotate(360deg) scale(2.5);
-	transition:transform .2s;
+	transform:rotate(360deg) scale(2);
+	transition:transform .25s;
+	border:0;
 }
